<resources>
    <string name="app_name">Hardware Mega Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Hardware Mega Search</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>

    <string name="search_stage_01">Choose a Component Type</string>
    <string name="search_stage_02">Choose a Primary Manufacturer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>

    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="ram">RAM</string>
</resources>
