<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeThirdFragment">

    <RadioGroup
        android:id="@+id/radiogrp_component_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_complete_stage_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radiobtn_cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu" />

        <RadioButton
            android:id="@+id/radiobtn_gpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gpu" />

        <RadioButton
            android:id="@+id/radiobtn_RAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ram" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_complete_stage_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogrp_component_type" />
</androidx.constraintlayout.widget.ConstraintLayout>