<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.k00221230.fyp.hardwaremegasearch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.k00221230.fyp.hardwaremegasearch.ui.home.HomeSecondFragment"
        android:label="@string/search_stage_01"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeThirdFragment"
            app:destination="@id/nav_home_third" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>
    <fragment
    android:id="@+id/nav_home_third"
    android:name="com.k00221230.fyp.hardwaremegasearch.ui.home.HomeThirdFragment"
    android:label="@string/search_stage_02"
    tools:layout="@layout/fragment_home_third">
    <action
        android:id="@+id/action_HomeThirdFragment_to_HomeFragment"
        app:destination="@id/nav_home" />

    <argument
        android:name="myArg"
        app:argType="string" />
</fragment>
</navigation>